--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -1,3 +1,31 @@
+### 술어 논리(Predicate Logic)
+
+- **술어 논리** : 변수(variable), 술어(predicate), 한정자(quantifier)를 사용하여 문장을 구성하고, 이를 통해 명제(proposition)의 참/거짓을 다룰 수 있는 논리 체계
+
+    - 술어(predicate): 어떤 속성이나 조건을 표현하는 함수 같은 것
+
+      - ex: P(x) : x > 0 또는 M(x) : x는사람이다
+
+
+
+
+
+    - 변수(variable): 술어에 들어갈 대상
+
+        - ex: x,y,z
+
+    - 도메인(domain): 변수가 가질 수 있는 값들의 집합
+
+        - ex: 정수 전체, 실수 전체, 학생 집합
+
+    - 한정자(quantifier): 변수를 묶어 “모든 경우” 또는 “어떤 경우”를 표현
+
+        - ∀x P(x): 모든 x에 대해 P(x)가 성립한다
+
+        - ∃x P(x): 어떤 x가 존재해서 P(x)가 성립한다
+
+<br/>
+
 ### 명제함수(Propositional function)
 
 - **명제함수(Propositional function)** : P(x)처럼 변수를 포함한 논리 표현식
