--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -54,6 +54,22 @@
 
 <br/>
 
+### 술어 논리 vs 명제 논리 차이 
+
+- 명제 논리 (Propositional Logic)
+
+    - 이미 참/거짓이 결정된 **완성된 문장**을 다룸
+ 
+    - 예: 3은 짝수이다 (거짓)
+
+<br/>
+
+- 술어 논리 (Predicate Logic)
+
+    - **조건식**과 **변수**를 사용해, 값을 넣거나 한정자를 붙여야 참/거짓이 정해지는 문장을 다룸
+      
+<br/>
+
 ### 명제함수(Propositional function) 예시
 
 - 예시 1 :  R(x,y,z) : x + y = z 라고 정의하고, 도메인 U는 정수 전체
@@ -70,9 +86,21 @@
 
     - Q(3, 4, 7): 3 − 4 = 7 → −1 = 7 → 거짓 (F)
 
+<br/>
 
+### 논리 연산자(∨, ∧, →, ¬)는 술어 논리에서도 사용 가능
 
+- 명제 논리(propositional logic)의 논리 연산자(∨, ∧, →, ¬)는 **술어 논리(predicate logic)에서도 그대로 사용 가능**
 
+    - ex: P(x) : x > 0, 도메인 = 정수
+      
+    - P(3) ∨ P(-1): (참 ∨ 거짓) = 참 (T)
+
+    - P(3) ∧ P(-1): (참 ∧ 거짓) = 거짓 (F)
+
+    - P(3) → P(-1): (참 → 거짓) = 거짓 (F)
+
+    - P(3) → ¬P(-1): (참 → 참) = 참 (T)
 
 
 
