--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -101,6 +101,14 @@
     - P(3) → P(-1): (참 → 거짓) = 거짓 (F)
 
     - P(3) → ¬P(-1): (참 → 참) = 참 (T)
+ 
+    - 하지만 변수가 남아있는 식은 명제가 아님 → 참/거짓 판단 불가
+ 
+        - ex: P(3) ∧ P(y)
+        
+        - ex: P(x) → P(y)
+
+        - 이런 식은 **한정자(∀, ∃)** 를 붙여야만 명제가 된다
 
 
 
