--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -110,8 +110,31 @@
 
         - 이런 식은 **한정자(∀, ∃)** 를 붙여야만 명제가 된다
 
+<br/>
 
+### 한정자(quantifier)
 
+- **∀x P(x)** : 모든 x에 대한 P(x)
+
+- 예시
+
+    - P(x) = “x > 0”, U = 정수 전체 → ∀x P(x) = 거짓 (음수도 있어서)
+
+    - P(x) = “x > 0”, U = 양의 정수 → ∀x P(x) = 참
+
+    - P(x) = “x는 짝수다”, U = 정수 전체 → ∀x P(x) = 거짓 (홀수도 있어서)
+
+<br/>
+
+- **∃x P(x)** : 어떤 x에 대한 P(x)
+
+- 예시
+
+    - P(x) = x > 0, U = 정수 전체 → ∃x P(x) = 참 (양수가 있으므로) 
+
+    - P(x) = x < 0, U = 양의 정수 → ∃x P(x) = 거짓 (양수 중 음수는 없음)
+
+    - P(x) = x는 짝수다, U = 정수 전체 → ∃x P(x) = 참 (짝수 존재)
 
 
 
