--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -136,6 +136,43 @@
 
     - P(x) = x는 짝수다, U = 정수 전체 → ∃x P(x) = 참 (짝수 존재)
 
+<br/>
+
+- **유한한 도메인** : ∀, ∃를 반복(loop) 검사로 생각할 수 있음
+
+    - ∀: 전부 참이어야 참, 하나라도 거짓이면 거짓 (즉시 종료)
+
+    - ∃: 하나라도 참이면 참 (즉시 종료), 끝까지 없으면 거짓
+
+- **무한한 도메인** : 같은 아이디어로 생각할 수는 있지만, 실제로는 검사 과정이 끝나지 않을 수도 있다
+
+<br/>
+
+### 도메인에 따른 ∀와 ∃의 진리값
+
+- ∃x P(x) (존재)와 ∀x P(x) (전칭)의 참/거짓은 **술어 P(x)** 와 **도메인 U** 에 **동시에 의존**
+
+    - 쉽게 말해, 집합 범위가 P(x)의 식에 따라 참 거짓이 결정된다
+
+    - 예시
+
+    - U = 양의 정수, P(x) : x < 2
+
+        - ∃x P(x): 참 (예: x=1이면 성립)
+
+        - ∀x P(x): 거짓 (예: x=3이면 성립 안 함)
+
+    - U = 음의 정수, P(x): x < 2
+
+        - ∃x P(x): 참 (모든 음수는 2보다 작음)
+
+        - ∀x P(x): 참 (음수 전체가 조건 만족)
+
+    - U = {3,4,5}, P(x): x > 2
+
+        - ∃x P(x): 참 (3, 4, 5 모두 조건 만족)
+
+        - ∀x P(x): 참 (모두 2보다 큼)
 
 
 
