--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -174,7 +174,19 @@
 
         - ∀x P(x): 참 (모두 2보다 큼)
 
+<br/>
 
+### 한정자의 우선순위
+
+- **∀, ∃**는 모든 논리 연산자(∨, ∧, → 등)보다 **우선순위가 높음**
+
+- 예
+
+    - ∀x P(x) ∨ Q(x) = (∀x P(x)) ∨ Q(x)
+
+    - ∀x (P(x) ∨ Q(x)) 는 **전혀 다른 의미**
+
+    - 그런데 사람들이 종종 ∀x P(x) ∨ Q(x)를 ∀x (P(x) ∨ Q(x))처럼 **잘못 쓰곤 함**
 
 
 
