--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -188,7 +188,29 @@
 
     - 그런데 사람들이 종종 ∀x P(x) ∨ Q(x)를 ∀x (P(x) ∨ Q(x))처럼 **잘못 쓰곤 함**
 
+<br/>
 
+### 문장을 술어 논리로 옮기는 방법
+
+- **핵심은 도메인 U를 먼저 정해야 한다**
+
+- 예시 : Every student in this class has taken a course in Java. (이 수업에 있는 모든 학생은 Java 수업을 들었다.)
+
+    - Solution 1: U = 이 수업에 있는 학생들
+
+        - J(x): “x는 Java 수업을 들었다”
+
+        - 번역: ∀x J(x)
+
+    - Solution 2: U = 모든 사람(전체 인류)
+
+        - S(x): “x는 이 수업의 학생이다”
+
+        - J(x): “x는 Java 수업을 들었다”
+
+        - 번역: ∀x (S(x) → J(x)) : 함의는 **만약 …라면 …이다**로 해석, 함의가 많이 사용되므로 **잘 기억해두기**
+ 
+        - (잘못된 표현: ∀x (S(x) ∧ J(x))) : 전 세계 사람들이 모두 이 수업의 학생이면서 java 수업을 들어야만 참
 
 
 
