--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -6,10 +6,6 @@
 
       - ex: P(x) : x > 0 또는 M(x) : x는사람이다
 
-
-
-
-
     - 변수(variable): 술어에 들어갈 대상
 
         - ex: x,y,z
@@ -212,7 +208,17 @@
  
         - (잘못된 표현: ∀x (S(x) ∧ J(x))) : 전 세계 사람들이 모두 이 수업의 학생이면서 java 수업을 들어야만 참
 
+<br/>
 
+### 술어 논리에서의 논리적 동치(logical equivalence)
+
+- 술어와 한정자가 들어간 문장에서도 **항상 같은 진리값을 가지면 동치** (명제논리 확장버전)
+
+    - 즉, 어떤 술어(predicate)를 넣더라도,
+
+    - 어떤 도메인(domain)을 사용하더라도,
+
+    - 항상 같은 진리값을 가진다면 동치라고 한다
 
 
 
