--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -220,6 +220,27 @@
 
     - 항상 같은 진리값을 가진다면 동치라고 한다
 
+<br/>
+
+### 유한 도메인에서의 한정자 전개
+
+- **도메인이 유한(finite)** 인 경우 
+
+    - 전칭 한정자(∀)는 **논리곱(AND, ∧)** 의 형태로 바꿀 수 있다.
+
+    - 존재 한정자(∃)는 **논리합(OR, ∨)** 의 형태로 바꿀 수 있다.
+
+    - 예: 도메인 U = { 1, 2, 3}
+
+        - ∀x P(x) ≡ P(1) ∧ P(2) ∧ P(3)
+
+        - ∃x P(x) ≡ P(1) ∨ P(2) ∨ P(3)
+
+<br/>
+
+- **도메인이 무한(infinite)** 인 경우
+
+    - 이와 같은 방식으로 생각할 수는 있지만, 식이 무한히 길어져서 실제로는 **나열 불가능**
 
 
 
