--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -242,6 +242,10 @@
 
     - 이와 같은 방식으로 생각할 수는 있지만, 식이 무한히 길어져서 실제로는 **나열 불가능**
 
+<br/>
+
+### 한정자의 부정(Negation of Quantifiers) with 드모르간 법칙
+
 
 
 
