--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -246,7 +246,7 @@
 
 ### 한정자의 부정(Negation of Quantifiers) with 드모르간 법칙
 
-
+![System Resources](../../images/Discrete%20Structures%20images/한정자부정.png)
 
 
 
