--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -248,7 +248,31 @@
 
 ![System Resources](../../images/Discrete%20Structures%20images/한정자부정.png)
 
+- **핵심 : ∃와 ∀는 부정할 때 서로 바뀐다**
 
+    - ∃의 부정 = ∀
+      
+    - ∀의 부정 = ∃
+
+    - 대신 술어 P(x)는 ¬P(x)로 바뀜
+
+<br/>
+
+- **¬∃x P(x) ≡ ∀x ¬P(x)**
+
+    - “P(x)인 x가 존재하지 않는다” ↔ “모든 x에 대해 P(x)가 아니다”
+ 
+    - 즉, 어떤 x도 존재하지 않다면, 모든 x에 대해 성립하지 않음
+ 
+    - 부정할 때 P(x) 앞에 **부정(¬)을 붙임** 
+
+<br/>
+
+- **¬∀x P(x) ≡ ∃x ¬P(x)**
+
+    - “모든 x가 P(x)인 것은 아니다” ↔ “P(x)가 아닌 x가 적어도 하나 존재한다”
+ 
+    - 즉, 모든 x에 대해서는 만족하지 않는다 = 적어도 하나의 반례가 존재한다 
 
 
 
