--- a/Computer Vision/Computer Vision study/01장.md
+++ b/Computer Vision/Computer Vision study/01장.md
@@ -1,1 +1,19 @@
+### 놀라운 인간의 시각
+
+- 인간은 아래 영상을 보고 인식, 추론, 예측, 상상 등을 수행함
+
+- 상황에 대한 빠른 인지가 가능
+
+- **아이디어 : 컴퓨터가 인간의 시각을 흉내낼 수 있을까**
+
+<br/>
+
+### 인간의 시각 구조 
+
+- 시각은 오감중에서 가장 뛰어남
+ 
+- 등쪽경로(녹색)는 주로 물체의 움직임, 배쪽경로(보라색)는 주로 물체의 부류를 알아냄
+    
+- 매 순간 빠르고 정확하게 그리고 아주 손쉽게 인식
+
 
