--- a/Computer Vision/Computer Vision study/01장.md
+++ b/Computer Vision/Computer Vision study/01장.md
@@ -18,4 +18,34 @@
 
 ![System Resources](../../images/Computer%20Vision%20images/뇌구조.png)
 
+<br/>
 
+### 인간 시각의 강점
+
+- 분류, 검출, 분할, 추적, 행동 분석에 능숙
+
+    - 사람은 물체가 무엇인지(분류), 어디 있는지(검출), 경계가 어디인지(분할), 어떻게 움직이는지(추적), 무엇을 하고 있는지(행동 분석)를 잘 알아낼 수 있음
+
+- 3차원 복원 능력
+
+    - 두 눈으로 본 정보를 바탕으로 물체의 깊이와 입체감을 잘 파악할 수 있음
+
+- 빠르고 강건(Robust)
+
+    - 조금 환경이 바뀌거나 방해가 있어도 크게 영향을 받지 않고 안정적으로 잘 인식가능
+
+- 다른 지능 요소인 지식 표현, 추론, 계획과 협동
+
+    - 보는 것만이 아니라, 본 것을 기반으로 지식을 연결하고 생각을 이어가며 다른 능력(추론·계획)과 함께 사용할 수 있음
+
+- 사전 행동(proactive)에 능숙
+
+    - 단순히 눈앞의 것을 보는 게 아니라, 앞으로 벌어질 일을 예측해서 미리 대비 가능 (예: 축구에서 공이 올 방향을 미리 준비)
+
+- 과업 전환이 매끄럽고 유기적이고 빠름
+
+    - 갑자기 다른 일을 해야 해도 시각은 금방 새로운 상황에 맞게 전환돼요.
+
+- 비주얼 서보잉이 뛰어남
+
+    - 눈으로 보고 손발을 조정하는 능력이 뛰어남 (예: 바늘에 실을 꿰거나 공을 잡는 동작)
