--- a/Computer Vision/Computer Vision study/01장.md
+++ b/Computer Vision/Computer Vision study/01장.md
@@ -49,3 +49,23 @@
 - 비주얼 서보잉이 뛰어남
 
     - 눈으로 보고 손발을 조정하는 능력이 뛰어남 (예: 바늘에 실을 꿰거나 공을 잡는 동작)
+
+<br/>
+
+### 인간 시각의 한계
+
+- 착시가 있음
+
+    - 눈이 실제와 다르게 보이게 속는 경우가 있음  (그림 속 A와 B 칸은 같은 색인데 다르게 보이는 것처럼)
+
+- 정밀 측정에 오차
+
+    - 눈으로는 아주 정확한 길이나 크기를 재기 어려움
+
+- 시야가 한정됨
+
+    - 눈은 앞쪽만 볼 수 있어서 뒤쪽이나 옆쪽은 직접 보지 못함.
+
+- 피로해지고 퇴화
+
+    - 오래 쓰면 눈이 피곤해지고, 나이가 들면 시력이 약해지는 한계가 있어요.
