--- a/Computer Vision/Computer Vision study/01장.md
+++ b/Computer Vision/Computer Vision study/01장.md
@@ -64,8 +64,86 @@
 
 - 시야가 한정됨
 
-    - 눈은 앞쪽만 볼 수 있어서 뒤쪽이나 옆쪽은 직접 보지 못함.
+    - 눈은 앞쪽만 볼 수 있어서 뒤쪽이나 옆쪽은 직접 보지 못함
 
 - 피로해지고 퇴화
 
-    - 오래 쓰면 눈이 피곤해지고, 나이가 들면 시력이 약해지는 한계가 있어요.
+    - 오래 쓰면 눈이 피곤해지고, 나이가 들면 시력이 약해지는 한계가 있음
+
+<br/>
+
+### 컴퓨터 비전
+
+- **컴퓨터 비전** : **인간의 시각을 흉내** 내는 컴퓨터 프로그램
+
+    - 인공지능의 중요한 구성 요소임
+    
+        - ex : 시각 기능이 없는 로봇은 낮은 성능 
+
+- 현재 컴퓨터 비전 기술로 **인간에 필적하는 시각 구현은 불가**
+
+    - **하지만, 과업을 한정하면** 인간 성능에 가깝거나 뛰어넘는 응용이 무궁무진
+ 
+    - ex: 차 번호판 인식처럼 특정 작업에서는 사람보다 더 잘하는 경우가 많음
+ 
+    - ex: 카메라 하나(단안 카메라)로도 거리(깊이)를 측정하는 기술
+
+![System Resources](../../images/Computer%20Vision%20images/과업한정예시.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
