--- a/Computer Vision/Computer Vision study/01장.md
+++ b/Computer Vision/Computer Vision study/01장.md
@@ -90,7 +90,39 @@
 
 ![System Resources](../../images/Computer%20Vision%20images/과업한정예시.png)
 
+<br/>
 
+### 대표적인 응용사례 
+
+농업 → 드론이나 카메라를 이용해 과일을 자동으로 인식하고 수확하는 기술. (예: 과일 수확 드론)
+
+의료 → CT·MRI 영상에서 혈관이나 종양을 찾아내고 분할하는 기술. (예: 혈관 분할)
+
+교통 → 자율주행 자동차가 카메라와 센서로 도로 상황을 인식하는 기술. (예: 자율주행 시스템)
+
+스마트 공장 → 생산 라인에서 제품에 불량이 있는지 자동 검사. (예: 볼링 공 검사처럼)
+
+스포츠 → 경기장에서 선수들의 움직임과 행동을 분석. (예: 농구 선수 위치와 동작 추적)
+
+유통 → 마트에서 고객의 이동 경로를 분석해 어떤 상품 앞에 오래 머무는지 파악.
+
+보안 → 얼굴 인식으로 출입 관리. (예: 얼굴 인식 보안 시스템)
+
+에너지 → 드론으로 태양광 패널을 모니터링하여 이상 여부 확인.
+
+엔터테인먼트 → 게임 속 캐릭터 행동을 영상 분석으로 자동 제어. (예: 알파스타 같은 AI 게임 플레이)
+
+환경 → 위성사진으로 지형이나 산림을 모니터링.
+
+우주과학 → 화성 탐사선이 카메라로 주변 환경을 인식하며 탐사.
+
+감시 → 공항이나 광장에서 CCTV로 사람들의 이동을 추적.
+
+예술 → 그림을 분석하거나 새로운 예술 작품 생성. (예: 에드몽 벨라미 AI 그림)
+
+가사 → 집에서 로봇 청소기가 방 구조를 인식해 청소 경로를 계획.
+
+휴머노이드 로봇 → 사람처럼 움직이고 주변을 인식해 협력할 수 있는 로봇.
 
 
 
