--- a/Computer Vision/Computer Vision study/01장.md
+++ b/Computer Vision/Computer Vision study/01장.md
@@ -124,12 +124,29 @@
 
 휴머노이드 로봇 → 사람처럼 움직이고 주변을 인식해 협력할 수 있는 로봇.
 
+<br/>
 
+### 컴퓨터 비전을 이용한 실제 프로젝트 
 
+- 자율주행을 위한 폭우 제거 시스템
 
+    - 카메라가 비에 가려 잘 보이지 않는 영상을, 컴퓨터 비전으로 빗줄기를 제거해 선명하게 만드는 기술
 
+- 자율주행을 위한 인공위성-정면 사진 매칭 시스템
+    
+    - 자율주행차가 보는 전방 카메라 영상과 위성 지도를 자동으로 매칭해서 현재 위치를 정확히 파악하는 기술
 
+- 도축을 위한 비전 시스템
 
+    - 카메라와 컴퓨터 비전을 이용해 도축 과정에서 돼지의 정확한 부위를 인식하고 처리하는 기술
+ 
+- 무인 예초를 위한 비전 시스템
+
+     - 사람이 풀을 직접 베지 않아도, 카메라로 풀과 땅을 구분해 자동으로 예초기(잔디깎기 로봇)가 작동하는 기술
+
+- 어류 가공을 위한 비전 시스템
+
+    - 공장에서 물고기를 자동으로 가공할 때, 카메라가 물고기의 머리·꼬리·몸통을 구분해 절단할 위치를 정확히 잡아주는 기술
 
 
 
