--- a/Computer Vision/Computer Vision study/01장.md
+++ b/Computer Vision/Computer Vision study/01장.md
@@ -148,7 +148,15 @@
 
     - 공장에서 물고기를 자동으로 가공할 때, 카메라가 물고기의 머리·꼬리·몸통을 구분해 절단할 위치를 정확히 잡아주는 기술
 
+<br/>
 
+### 컴퓨터 비전은 뇌에 가깝다
+
+- 컴퓨터 비전은 시각보단 뇌에 가깝다
+
+    - 데이터를 받아드리고 해석을 해야 한다
+
+![System Resources](../../images/Computer%20Vision%20images/시각정보처리과정.png)
 
 
 
