--- a/Computer Vision/Computer Vision study/01장.md
+++ b/Computer Vision/Computer Vision study/01장.md
@@ -156,6 +156,18 @@
 
     - 데이터를 받아드리고 해석을 해야 한다
 
+- 시각 정보 처리 과정
+
+    - 1. Image acquisition (영상 획득): 카메라와 조명을 이용해 이미지를 얻음
+
+    - 2. Image digitization (영상 디지털화): 얻은 이미지를 0과 1로 된 디지털 데이터로 바꿈
+
+    - 3. Image processing (영상 처리): 컴퓨터가 데이터를 가공해 노이즈 제거, 선명도 향상 등을 함
+
+    - 4. Image analysis (영상 분석): 분석 프로그램이 물체의 모양, 위치, 크기 등을 파악
+
+    - 5. Interpretation (해석): 최종적으로 그 물체가 무엇인지 의미를 해석하고, 로봇 같은 장치가 행동으로 옮길 수 있도록 전달
+  
 ![System Resources](../../images/Computer%20Vision%20images/시각정보처리과정.png)
 
 
