--- a/Computer Vision/Computer Vision study/01장.md
+++ b/Computer Vision/Computer Vision study/01장.md
@@ -167,6 +167,8 @@
     - 4. Image analysis (영상 분석): 분석 프로그램이 물체의 모양, 위치, 크기 등을 파악
 
     - 5. Interpretation (해석): 최종적으로 그 물체가 무엇인지 의미를 해석하고, 로봇 같은 장치가 행동으로 옮길 수 있도록 전달
+     
+    - Control Interface Unit : 해석된 결과(ex: 이건 박스다, 여기 위치해 있다)를 로봇 같은 기계에 전달하는 장치
   
 ![System Resources](../../images/Computer%20Vision%20images/시각정보처리과정.png)
 
