--- a/Computer Vision/Computer Vision study/01장.md
+++ b/Computer Vision/Computer Vision study/01장.md
@@ -172,8 +172,31 @@
   
 ![System Resources](../../images/Computer%20Vision%20images/시각정보처리과정.png)
 
+<br/>
 
+### 컴퓨터 비전이 어려운 이유
 
+- **1. 세상의 변화무쌍함**
+
+    - 세상은 늘 바뀌고 있음
+    
+    - ex: 낮과 밤, 맑음·비·눈 같은 날씨, 카메라 각도나 위치 변화, 딱딱한 물체(돌)와 말랑한 물체(천)처
+
+- **2. 컴퓨터는 넘버 크런처**
+
+    - 컴퓨터는 본질적으로 숫자를 계산함
+ 
+    - ex: 우리가 눈으로 보면 눈동자 사진이지만, 컴퓨터는 그걸 0~255 사이의 숫자로 된 **수천 개의 픽셀 값으로만 봄** -> 즉 , 해석이  더 어려움
+ 
+- **3. 인공지능의 미숙함**
+
+    - 지식 표현, 추론, 계획, 학습이 유기적으로 동작할 때만 강한 인공지능 가능
+ 
+       - 하지만 이 기능들이 아직 완벽히 연결을 하는 것이 어려움
+     
+    - 강한 인공지능은 먼 미래의 일
+ 
+        - 지금 단계의 AI는 특정 과제만 잘하는 약한 AI이고, 사람처럼 자유롭게 생각하고 보는 강한 AI는 아직 멀었다 
 
 
 
