--- a/Computer Vision/Computer Vision study/01장.md
+++ b/Computer Vision/Computer Vision study/01장.md
@@ -198,6 +198,33 @@
  
         - 지금 단계의 AI는 특정 과제만 잘하는 약한 AI이고, 사람처럼 자유롭게 생각하고 보는 강한 AI는 아직 멀었다 
 
+<br/>
+
+### 컴퓨터 비전의 역사 
+
+- 신문 산업에서 태동한 디지털 영상
+
+    - 1920년 유럽과 북미 간 케이블을 통해 사진 전송하는 Bartlane 시스템 개통 (신문 기사를 빠르게 전달하기 위함)
+
+    - 즉, 디지털 영상 개념이 처음 시작된 건 신문 산업 덕분
+
+- 1946년 세계 최초의 범용 전자식 컴퓨터인 에니악 탄생
+
+    - 빠른 계산이 주목적 (에니악은 초당 3000개가량 덧셈)
+
+    - 에니악(ENIAC)은 최초의 대형 전자식 컴퓨터로, 아주 빠른 계산을 하기 위해 만들어졌음
+
+    - 초당 3,000번 덧셈을 할 수 있었는데, 당시에는 엄청난 속도였음
+
+    - 이처럼 빠른 계산 능력은 이후 이미지 처리 연구의 기반이 됨
+
+- 1957년 스캐너를 통해 디지털 영상을 컴퓨터에 저장
+
+    - 5cm x 5cm 사진에서 획득한 176x176 디지털 영상 ← 컴퓨터 비전의 태동
+
+    - 1957년에 처음으로 사진을 스캐너로 읽어, 숫자로 된 디지털 이미지 데이터를 컴퓨터에 저장함
+      
+    - 해상도는 176x176 픽셀(지금 기준으로는 매우 낮은 화질)이었지만, 이것이 컴퓨터 비전 연구의 시작점이었다 
 
 
 
