--- a/Computer Vision/Computer Vision study/01장.md
+++ b/Computer Vision/Computer Vision study/01장.md
@@ -227,7 +227,27 @@
     - 해상도는 176x176 픽셀(지금 기준으로는 매우 낮은 화질)이었지만, 이것이 컴퓨터 비전 연구의 시작점이었다 
 
 
-## p.20부터 공부 
+### 궁극적 목표 vs 현실적 목표 
+
+- **궁극적인 목표**
+
+    - 일반적인 상황에서 잘 작동하는 인간과 같은 시각 (강한 인공지능)
+
+        - 사람처럼 어디서든 어떤 상황에서도 자유롭게 보고 이해할 수 있는 AI.
+
+    - 영영 불가능하거나 먼 미래에 실현 예상
+
+<br/>
+
+- **현실적인 목표**
+
+- 제한된 환경에서 특정 과업을 높은 성능으로 달성 (약한 인공지능)
+
+    - 제한된 상황에서, 특정한 일만 잘하게 만드는 게 지금 가능한 목표이다 (ex: 자율주행차가 도로에서 차선만 인식)
+
+- 컴퓨터 비전 문제를 여러 세부 문제로 구분하고 세부 문제별로 알고리즘 구상
+
+    - 큰 목표(‘사람처럼 보기’)를 작은 문제(분류, 검출, 분할 등)로 나눠 하나씩 해결하는 방식을 선호함
 
 
 
