--- a/Computer Vision/Computer Vision study/01장.md
+++ b/Computer Vision/Computer Vision study/01장.md
@@ -249,7 +249,19 @@
 
     - 큰 목표(‘사람처럼 보기’)를 작은 문제(분류, 검출, 분할 등)로 나눠 하나씩 해결하는 방식을 선호함
 
+<br/>
 
+### 컴퓨터 비전 기본 문제 (Task)
+
+- 분류 : 사진에 있는 것이 고양이인지, 강아지인지 구분
+
+- 검출 : 사진 속에서 사람이나 자동차가 어디 있는지 찾아내기
+
+- 분할 : 물체의 정확한 영역(경계선)을 표시
+
+- 추적 : 움직이는 물체(예: 사람, 자동차)를 따라가며 위치 기록
+
+- 행동 분석 : 사람의 동작이나 행동을 인식. (예: 점프, 달리기, 농구 슛 등)
 
 
 
