--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -1,3 +1,9 @@
 ### 영상 처리 (Image Processing)
 
 - **영상 처리 (Image Processing)** : 특정 목적을 달성하려고 원래 영상을 개선된 새로운 영상으로 변환하는 작업
+
+    - 화질 개선 자체가 목적일 경우에 사용
+ 
+    - 컴퓨터 비전은 영상 처리를 전처리로 활용하여 인식 성능을 향상함
+      
+![System Resources](../../images/Computer%20Vision%20images/안개예시.png)
