--- a/Computer Vision/Computer Vision study/01-2장.md
+++ b/Computer Vision/Computer Vision study/01-2장.md
@@ -7,3 +7,9 @@
     - 컴퓨터 비전은 영상 처리를 전처리로 활용하여 인식 성능을 향상함
       
 ![System Resources](../../images/Computer%20Vision%20images/안개예시.png)
+
+<br/>
+
+### 컴퓨터비전 & 영상 처리 차이 
+
+![System Resources](../../images/Computer%20Vision%20images/컴퓨터비전_영상처리차이.png)
