--- a/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
+++ b/Artificial Neural Network/Artificial Neural Network study/중간정리본.md
@@ -27,7 +27,7 @@
 
     - 머신러닝 관점 : 맞고/틀리다(정답 예측)이 중요 ex: XGBOOST
 
-    - 통계적 학습 관점 : 상관관계를 찾고 설명하는 것 ex: linear regression, logistic regression
+    - 통계적 학습 관점 : **상관관계**를 찾고 설명하는 것 ex: linear regression, logistic regression
       
     - ex : 전립선암 위험 요인 찾기, 이메일 스팸 탐지, 유전자 기반 암 분류, 위성 이미지 픽셀 분류
 
