--- a/Natural Language Processing/Natural Language Processing study/02장.md
+++ b/Natural Language Processing/Natural Language Processing study/02장.md
@@ -5,5 +5,7 @@
     - 한국어는 초성, 중성, 종성으로 이루어져 있음
  
     - 한국어 음절 구성은 아래와 같이 네 종류로 구성됨
+ 
+![System Resources](../../images/Natural%20Language%20Processing%20images/음절예시.png)
 
 
