--- a/Natural Language Processing/Natural Language Processing study/02장.md
+++ b/Natural Language Processing/Natural Language Processing study/02장.md
@@ -84,6 +84,12 @@
 
 ### 단어 토큰화 및 벡터화 예시
 
+1. 문장이 토큰 리스트로 분리 
+
+2. vocab 생성 및 정렬 
+
+3. one-hot 벡터 출력
+
 ```ruby
 import numpy as np
 
@@ -119,13 +125,30 @@ print(onehot_vectors)
 #  [0 0 0 0 1 0 0 0 0 0]   # age
 #  [0 0 0 0 0 0 0 0 1 0]   # of
 #  [1 0 0 0 0 0 0 0 0 0]]  # 26.
+```
+
+<br/>
+
+### 원-핫 인코딩 (One-hot encoding)
+
+- **원-핫 인코딩** 
+
+    - 다중 클래스 분류 문제에서 label을 만들던 방식과 유사
+ 
+    -  NLP 분야에서는 모델 학습에 사용하는 데이터셋을 **말뭉치(corpus)**
+ 
+        - 말뭉치 정의: 자연언어 연구를 위해 특정한 목적을 가지고 언어의 표본을 추출한 집합  
+
+- 원-핫 인코딩을 하기 위해서
+  
+    - 말뭉치 내 모든 단어에 대해 중복을 제거한 리스트를 만든다
+   
+    - 단어 개수만큼 크기를 가진 벡터(feature vector)를 만든다
+
+    - **각 단어는 자기 위치(index)에만 1, 나머지는 전부 0으로 채운다**
 
 
-
-
-
-
-
+![System Resources](../../images/Natural%20Language%20Processing%20images/원핫인코딩결과예시.png)
 
 
 
