--- a/Natural Language Processing/Natural Language Processing study/02장.md
+++ b/Natural Language Processing/Natural Language Processing study/02장.md
@@ -146,6 +146,12 @@ print(onehot_vectors)
     - 단어 개수만큼 크기를 가진 벡터(feature vector)를 만든다
 
     - **각 단어는 자기 위치(index)에만 1, 나머지는 전부 0으로 채운다**
+ 
+        - 이와 같이 벡터 또는 행렬의 값이 **대부분 0**으로 표현되는 것을 **희소 표현**(sparse 
+representation)이라고 함
+
+        - 이와 반대로 벡터 또는 행렬의 거의 **대부분 값이 0 이외의 값**을 갖고 있는 것을 **밀집 표현**
+(dense representation)이라고 함
 
 
 ![System Resources](../../images/Natural%20Language%20Processing%20images/원핫인코딩결과예시.png)
