--- a/Natural Language Processing/Natural Language Processing study/02장.md
+++ b/Natural Language Processing/Natural Language Processing study/02장.md
@@ -157,7 +157,7 @@ representation)이라고 함
 ![System Resources](../../images/Natural%20Language%20Processing%20images/원핫인코딩결과예시.png)
 
 
-![System Resources](../../images/Natural%20Language%20Processing%20images/희소표현_밀집표현예시.png)
+![System Resources](../../images/Natural%20Language%20Processing%20images/희소표현_밀집표현_예시.png)
 
 
 
