--- a/Natural Language Processing/Natural Language Processing study/02장.md
+++ b/Natural Language Processing/Natural Language Processing study/02장.md
@@ -159,16 +159,44 @@ representation)이라고 함
 
 ![System Resources](../../images/Natural%20Language%20Processing%20images/희소표현_밀집표현_예시.png)
 
+<br/>
 
+### 원-핫 인코딩의 한계
 
+- 단어 수가 늘어남에 따라 벡터의 크기가 같이 늘어남 -> **메모리 비효율이 굉장히 심함**
 
+    - 단어 사전(vocab)이 1만 개라면, "cat" 하나도 길이가 1만짜리 벡터로 표현해야 함
+ 
+    - 만개 중 하나만 1이고 9999개가 0이므로 메모리가 너무 큼 
 
+- 이것을 **Bag-of-words로 해결**
 
+<br/>
 
+### 원-핫 인코딩의 해결책 : Bag-of-words
 
+- Bag-of-words 방식을 쓰면 벡터의 길이는 토큰 수와 같다는 점은 원-핫 벡터와 유사함
 
+    - 하지만, 이러한 벡터가 단어 하나를 나타내는 것이 아니라 문장이나 문서를 나타내게 되어 메모리 **효율성이 훨씬 개선됨**
+ 
+    - ex: 문장1: I love NLP / 문장2: I love AI -> Vocabulary: ['I', 'love', 'NLP', 'AI']
+ 
+        - 원 핫 인코딩
+     
+            - "I" → [1, 0, 0, 0]
 
+            - "love" → [0, 1, 0, 0]
 
+            - "NLP" → [0, 0, 1, 0]
+
+            - "AI" → [0, 0, 0, 1]
+         
+        - Bag-of-Words
+     
+            - 문장1 "I love NLP" → [1, 1, 1, 0] (I, love, NLP는 등장 / AI는 없음)
+
+            - 문장2 "I love AI" → [1, 1, 0, 1] (I, love, AI는 등장 / NLP는 없음)
+          
 
 
 
