--- a/Natural Language Processing/Natural Language Processing study/02장.md
+++ b/Natural Language Processing/Natural Language Processing study/02장.md
@@ -131,14 +131,18 @@ print(onehot_vectors)
 
 ### 원-핫 인코딩 (One-hot encoding)
 
-- **원-핫 인코딩** 
+- **원-핫 인코딩** : 범주형 데이터(예: 단어, 클래스)를 **벡터 형태로 변환**하는 방법
+
+    - 컴퓨터는 숫자만 이해하기 때문에 자연어(문자)를 바로 계산할 수 없음
+    
+        - 반드시 숫자 벡터로 변환 필요  
 
     - 다중 클래스 분류 문제에서 label을 만들던 방식과 유사
  
     -  NLP 분야에서는 모델 학습에 사용하는 데이터셋을 **말뭉치(corpus)**
  
-        - 말뭉치 정의: 자연언어 연구를 위해 특정한 목적을 가지고 언어의 표본을 추출한 집합  
-
+        - 말뭉치 정의: 자연언어 연구를 위해 특정한 목적을 가지고 언어의 표본을 추출한 집합
+ 
 - 원-핫 인코딩을 하기 위해서
   
     - 말뭉치 내 모든 단어에 대해 중복을 제거한 리스트를 만든다
@@ -198,10 +202,7 @@ representation)이라고 함
             - 문장2 "I love AI" → [1, 1, 0, 1] (I, love, AI는 등장 / NLP는 없음)
           
 
-
-
-
-
+## p.18부터 
 
 
 
