--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -1,1 +1,130 @@
+### From Biology to Artificial Intelligence
+
+- 인공지능(ANN, Artificial Neural Network)은 생물학적 **뉴런(신경세포)을 모방**해서 만들어
+
+<br/>
+
+- 생물학적 뉴런의 구성 요소
+  
+    - 수상돌기(Dendrite): 입력을 받는 부분 (안테나처럼 신호를 받음)
+ 
+    - 세포체(Cell body, Soma): 상돌기로 받은 신호들을 종합하고 계산하는 부분. CPU처럼 중앙 처리기 역할
+ 
+    - 축삭(Axon) : 출력 신호를 전달하는 부분
+ 
+    - 시냅스(Synapse): 뉴런과 뉴런 사이의 연결 지점. 신호가 실제로 전달되는 접점
+
+<br/>
+
+- **핵심 원리**: 입력이 **임계값을 넘으면** 뉴런은 발화(fire)한다 (반응한다)
+
+- 뉴런 발화 과정
+
+    - 많은 뉴런으로부터 신호를 받는다
+ 
+    - 이 신호들을 합친다
+ 
+    - 합이 임계값을 넘으면 발화한다
+ 
+    - 전부 아니면 전무(All-or-nothing) 반응
+     
+        - 뉴런은 조금만 발화하거나 약하게 발화하는 게 없음. 기준치를 넘으면 100% 반응하고, 안 넘으면 0% 반응함
+
+<br/>
+
+- 뉴런은 수상돌기로 입력 신호를 받고 → 세포체에서 처리하고 → 축삭을 통해 출력 신호를 전달하며 → 시냅스에서 다른 뉴런과 연결된다
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
