--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -34,7 +34,7 @@
 
 - 뉴런은 수상돌기로 입력 신호를 받고 → 세포체에서 처리하고 → 축삭을 통해 출력 신호를 전달하며 → 시냅스에서 다른 뉴런과 연결된다
 
-
+![System Resources](../../images/Artificial%20Neural%20Network%20images/뉴런구조.png)
 
 
 
