--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -36,30 +36,100 @@
 
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/뉴런구조.png)
 
+<br/>
+
+### Neurons (뉴런)
+
+- **뉴런** : 뇌와 신경계 속 작은 처리 단위
+
+    - 인간의 뇌에는 약 860억 개의 뉴런이 존재
+ 
+        - 뉴런은 엄청나게 많아, 뇌가 고도의 정보처리를 할 수 있음
+     
+    - 뉴런은 가느다란 케이블을 통해 전기적, 화학적 신호로 소통함 
+
+<br/>
+
+- **감각 뉴런 (Sensory Perception)** : 신호를 뇌와 척수로 보낸다
+
+    - 뉴런이 감각 정보를 처리하고 반응하도록 도와준다
+ 
+        - ex: 뜨거운 것을 만졌을 때 바로 손을 떼는 현상  
+
+<br/>
+
+- 뉴런은 시냅스라 불리는 작은 틈을 통해 소통한다
+
+    - 뉴런과 뉴런은 직접 붙어 있지 않고, 사이에 있는 시냅스을 통해 화학물질로 신호를 주고받음 
+
+- 자주 소통할수록 시냅스가 강화되어, 학습과 기억에 도움을 준다
+
+    - ex: 영어 단어를 자꾸 외우면 기억에 오래 남음 
+
+<br/>
+
+- **신경가소성 (Neuroplasticity)** : 경험을 통해 뇌가 변화할 수 있는 능력
+
+    - 뇌는 고정된 것이 아니라, 새로운 경험을 하면 뉴런 연결이 바뀌고 뇌 구조도 달라질 수 있다.
+
+        -  ex : 악기를 배우면 뇌의 관련 영역이 발달
+
+<br/>
+
+### Biological Neurons 과 Artificial Neurons 차이점 
+
+- **Biological Neurons (생물학적 뉴런)**
+
+    - 각각 약 1만 개의 연결을 가짐
+ 
+    - 복잡한 시간적 역학(변화)
+ 
+        - 신호가 시간에 따라 달라지고, 단순히 ‘켜짐/꺼짐’이 아니라 연속적인 변화가 있음 
+
+    - 화학적, 전기적 신호를 사용해서 소통
+ 
+    - 지속적으로 적응
+
+<br/>
+
+- **Artificial Neurons (Perceptrons, 인공 뉴런)**
+
+    - 원하는 만큼 입력을 가질 수 있음
+ 
+    - 단순한 수학 연산만 수행
+ 
+        - 가중치 곱하기, 더하기, 임계값 비교 같은 간단한 연산
+     
+    - 디지털 신호 사용
+ 
+        - 0 또는 1 같은 이산적인 신호로 계산
+
+    - 학습 후에는 고정됨
+
+<br/>
+
+- Perceptrons (인공 뉴런) 예시 : 밖에 나가야 할까?
+
+    - input data
+
+        - x₁ = Is it sunny? (1=yes, 0=no)
+
+        - x₂ = Is it warm? (1=yes, 0=no)
+
+        - x₃ = Is it raining? (1=yes, 0=no)
+     
+    - 뉴런은 이런 가중치를 학습할 수 있다
+ 
+        - w₁ = +2 (sunny is good) → w₁=+2 (햇볕은 좋음)
+
+        - w₂ = +1 (warm is nice) → w₂=+1 (따뜻한 건 좋음)
+
+        - w₃ = -3 (rain is bad) → w₃=-3 (비는 나쁨)
+     
+    - **의사결정: (2×햇볕 + 1×따뜻함 - 3×비 - 1) > 0 이면, 나간다**
 
 
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
+- 즉, 입력 → 가중치 적용 → 합산 → 임계값 비교 → 출력 결정을 수행
 
 
 
