--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -131,13 +131,27 @@
 
 - 즉, 입력 → 가중치 적용 → 합산 → 임계값 비교 → 출력 결정을 수행
 
+<br/>
 
+### 생물학적 뉴런 ->수학적 퍼셉트론 모델 변 과정 
 
+생물학적 뉴런을 바탕으로한 변환 과정 
 
+    - 수상돌기 (Dendrite)가 신호를 받는다 → 입력값으로 표현 (x₁, x₂, …, xₙ)
 
+    - 시냅스 (Synaptic)의 강도 → 가중치 (w₁, w₂, …, wₙ)
 
+    - 세포체 (soma)에서 통합 → 가중합 계산 Σ wᵢxᵢ
 
+    - 발화 임계값 → 편향(b)
 
+    - 발화/비발화 → 활성화 함수
+
+- 퍼셉트론 식: (가중합 + 편향) > 0 이면 출력=1, 그렇지 않으면 0
+
+<br/>
+
+- 영감에서 구현까지의 과정
 
 
 
