--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -135,7 +135,7 @@
 
 ### 생물학적 뉴런 ->수학적 퍼셉트론 모델 변 과정 
 
-생물학적 뉴런을 바탕으로한 변환 과정 
+- 생물학적 뉴런을 바탕으로한 변환 과정 
 
     - 수상돌기 (Dendrite)가 신호를 받는다 → 입력값으로 표현 (x₁, x₂, …, xₙ)
 
@@ -151,7 +151,8 @@
 
 <br/>
 
-- 영감에서 구현까지의 과정
+![System Resources](../../images/Artificial%20Neural%20Network%20images/퍼셉트론구조.png)
+
 
 
 
