--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -153,7 +153,9 @@
 
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/퍼셉트론구조.png)
 
+<br/>
 
+### 활성화 함수(Activation Function)
 
 
 
