--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -155,9 +155,11 @@
 
 <br/>
 
-### 활성화 함수(Activation Function)
+### 활성화 함수(Activation Function) 
 
+- 활성화 함수(Activation Function) : 뉴런이 계산한 가중합(입력 × 가중치 + 편향)을 받아, 이를 출력값으로 변환하여 뉴런의 발화 여부나 강도를 결정하는 함수
 
+![System Resources](../../images/Artificial%20Neural%20Network%20images/활성화함수.png)
 
 
 
