--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -161,7 +161,7 @@
 
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/활성화함수.png)
 
-
+![System Resources](../../images/Artificial%20Neural%20Network%20images/활성화함수공식.png)
 
 
 
