--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -161,9 +161,37 @@
 
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/활성화함수.png)
 
+- 활성화함수 공식 
+  
 ![System Resources](../../images/Artificial%20Neural%20Network%20images/활성화함수공식.png)
 
+ - 활성화함수 공식 예시
 
+    - 입력 특징
+
+        - x1 = 햇볕이 있음 (1/0)
+
+        - x2 = 따뜻함 (1/0)
+
+        - x3 = 비가 옴 (1/0)
+
+    - 가중치
+
+        - w1 = +2 (햇볕은 좋음)
+
+        - w2 = +1 (따뜻한 건 좋음)
+
+        - w3 = -3 (비는 나쁨)
+
+    - 편향
+
+        - b = -1 (조금 귀찮음)
+     
+    - 만약 날씨가 맑고 따뜻하고 비 안 온다면 (x=[1,1,0])
+
+        - w⋅x+b=(2)(1)+(1)(1)+(−3)(0)−1=2+1+0−1=2>0
+    
+ 
 
 
 
