--- a/Artificial Neural Network/Artificial Neural Network study/02장.md
+++ b/Artificial Neural Network/Artificial Neural Network study/02장.md
@@ -189,7 +189,9 @@
      
     - 만약 날씨가 맑고 따뜻하고 비 안 온다면 (x=[1,1,0])
 
-        - w⋅x+b=(2)(1)+(1)(1)+(−3)(0)−1=2+1+0−1=2>0
+        - w⋅x+b=(2)(1)+(1)(1)+(−3)(0)−1=2+1+0−1=2>0 처럼 내적을 사용 
+     
+        - 출력 : 밖에 나간다(1)
     
  
 
