--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -208,15 +208,19 @@
  
         - (잘못된 표현: ∀x (S(x) ∧ J(x))) : 전 세계 사람들이 모두 이 수업의 학생이면서 java 수업을 들어야만 참
 
+<br/>
+
 - 즉 여기서 핵심은
 
     - **∃ (존재)**: 실제로 조건을 동시에 만족하는 대상이 있어야 의미가 있으므로 **∧ 사용**
  
-        - ex: 교수님이 자바 수업을 듣지 않음 -> 함의를 사용하면 전제가 F일 때 참 -> 학생 중에 자바를 듣는 학생이 없어도 참이 나옴  
+        - ex: 교수님이 자바 수업을 듣지 않음 -> 함의를 사용하면 전제가 F일 때 참 -> 학생 중에 자바를 듣는 학생이 없어도 참이 나옴
 
-    - **∀ (전체)**: 모든 대상을 다루되, 학생이 아닌 사람은 조건에서 제외해야 하므로 **→ 사용**
+    - **∀ (전체)**: 모든 대상을 다루되, 학생이 아닌 사람은 조건에서 제외해야 함 **→ 사용**
+
         - ex: 교수님이 학생 아님 → 그런데 ∧에서는 S(x)=F면 전체가 F → 따라서 학생 아닌 사람 때문에 전체 명제가 거짓 → “모든 학생이 자바를 들었다”라는 의도가 깨짐
-          
+        
+        - 함의를 사용해야 수업을 듣는 대상이 아닌 교수님은 F이므로 "참"이 되어 교수님에 의해 결과가 F가 나오지 않음   
 <br/>
 
 ### 술어 논리에서의 논리적 동치(logical equivalence)
@@ -297,9 +301,17 @@
 
         - ∃x: 적어도 한 명의 x가 존재한다
 
+<br/>
 
+- ex: 이 수업의 모든 학생은 캐나다나 멕시코 중 적어도 한 곳을 방문한 적이 있다
 
+    - ∀x(S(x)→(M(x)∨C(x)))
+ 
+        - S(x): x는 이 수업의 학생이다
 
+        - M(x): x는 멕시코를 방문했다
+
+        - C(x): x는 캐나다를 방문했다 
 
 
 
