--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -313,11 +313,32 @@
 
         - C(x): x는 캐나다를 방문했다 
 
+<br/>
+
+### Nested quantifiers (중첩 한정) 풀이 방
+
+- 중첩된 한정자는 영어 문장의 의미나 컴퓨터 과학·수학에서 중요한 개념을 표현할 때 자주 필요
+
+    - 한 번의 한정자로는 다 못 담아서, 여러 개(∀, ∃)를 겹쳐 써야 할 때가 많다
+ 
+    - ex: 모든 실수에는 역수가 있다
+ 
+        - ∀x∃y(x+y=0)
+     
+    - 위 예시 중첩된 명제 함수로도 볼 수 있다
+ 
+        - P(x,y) : (x+y=0)
+          
+        - Q(x) : ∃yP(x,y) = “주어진 x에 대해, 어떤 y가 있어서 x + y = 0이 된다.”
+     
+        - 이때 y = −x를 잡으면 조건 만족 -> 즉, 임의의 x에 대해 항상 그에 맞는 y=−x가 존재
+     
+        - 따라서 Q(x)는 모든 x에서 참
+     
+        - 증명 완료 
 
 
-
-
-
+            
 
 
 
