--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -335,6 +335,8 @@
      
         - 따라서 Q(x)는 모든 x에서 참
      
+            - 여기서 **핵심**은 모든 x에 대해 Q(x)가 성립하는지”로 **단순화**를 하고 Q(x)가 어떤 x에서도 참이므로, ∀x가 필수적이라는 걸 보여주는 것임
+     
         - 증명 완료 
 
 
