--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -337,7 +337,21 @@
      
             - 여기서 **핵심**은 모든 x에 대해 Q(x)가 성립하는지”로 **단순화**를 하고 Q(x)가 어떤 x에서도 참이므로, ∀x가 필수적이라는 걸 보여주는 것임
      
-        - 증명 완료 
+        - 증명 완료
+
+    - 만약 식을 ∃y∀x(x+y=0) 이렇게 쓴다면
+ 
+        - ∀x(x+y=0) : “주어진 y에 대해, 모든 x+y=0을 만족해야 한다.”
+ 
+        - ∀x는 모든 실수 x에 대해 성립해야하지만, 실제로는 오직  x=−y일 때만 조건이 참
+     
+        - 어떤 y를 선택해도 “모든 x”를 만족시키는 것은 불가능 -> **거짓**
+
+    
+
+    
+
+    
 
 
             
