--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -321,10 +321,12 @@
 
     - 한 번의 한정자로는 다 못 담아서, 여러 개(∀, ∃)를 겹쳐 써야 할 때가 많다
  
-    - ex: 모든 실수에는 역수가 있다
+    - **ex: 모든 실수에는 역수가 있다**
  
         - ∀x∃y(x+y=0)
-     
+          
+    <br/>
+    
     - 위 예시 중첩된 명제 함수로도 볼 수 있다
  
         - P(x,y) : (x+y=0)
@@ -338,8 +340,10 @@
             - 여기서 **핵심**은 모든 x에 대해 Q(x)가 성립하는지”로 **단순화**를 하고 Q(x)가 어떤 x에서도 참이므로, ∀x가 필수적이라는 걸 보여주는 것임
      
         - 증명 완료
-
-    - 만약 식을 ∃y∀x(x+y=0) 이렇게 쓴다면
+          
+    <br/>
+    
+    - **만약 식을 ∃y∀x(x+y=0) 이렇게 쓴다면**
  
         - ∀x(x+y=0) : “주어진 y에 대해, 모든 x+y=0을 만족해야 한다.”
  
@@ -347,9 +351,33 @@
      
         - 어떤 y를 선택해도 “모든 x”를 만족시키는 것은 불가능 -> **거짓**
 
-    
+<br/>
 
-    
+### ∀x∀y P(x,y) 와 ∀x∃y P(x,y) 풀이 방식 
+
+- ∀x∀y P(x,y) 
+
+    - x 하나 고르고, 모든 y 확인
+
+    - 어떤 (x,y)라도 거짓이면 전체가 거짓 → 중단
+
+    - 모든 (x,y)에서 참이면 전체가 참
+
+        - 즉, **모든 쌍이 참이어야 함**
+
+- ∀x∃y P(x,y) 
+
+    - x 하나 고르고, y들을 차례대로 확인
+
+    - y 중 하나라도 P(x,y)=참이면 그 x는 통과
+
+    - 만약 어떤 x에 대해 그런 y를 못 찾으면 전체 거짓
+
+    - 모든 x가 통과하면 전체 참.
+
+        - 즉, **x마다 최소 하나의 y가 있어야 한다**
+
+주의: 도메인이 무한이면 실제로 다 확인하는 건 불가능 → 이론적 의미로만 생각해야 함.
 
     
 
