--- a/Discrete Structures/Discrete Structures study/02장.md
+++ b/Discrete Structures/Discrete Structures study/02장.md
@@ -379,13 +379,45 @@
 
 주의: 도메인이 무한이면 실제로 다 확인하는 건 불가능 → 이론적 의미로만 생각해야 함.
 
-    
+<br/>
 
+### 순서에 따른 한정자 해석 
 
-            
+- P(x,y) = “x+y = y+x” 이고, 정의역 U는 실수 전체라 정의하자
 
+    - 이때, ∀x ∀y P(x,y) 와 ∀y ∀x P(x,y) 는 같은 참 거짓 값을 가짐
 
+- 이번엔 Q(x,y) = “x+y=0” 이고정의역 U는 실수 전체라고 정의하자
 
+    - "모든 x에 대해, 어떤 y가 존재해서 x+y=0 이 된다"는 참
+
+    - 하지만 “어떤 y 하나가 있어서, 모든 x에 대해 x+y=0이 된다”는 거짓
+ 
+    - 즉 **한정자의 순서가 다르면 의미도 달라진다**
+
+<br/>
+
+- 예시1 : P(x,y) : x⋅y = 0, 정의역은 실수 전체
+
+    - ∀x∀y P(x,y) → False : 모든 (x,y)에 대해 곱이 0이 되어야 하는데, 일반적으로 안 맞음
+
+    - ∀x∃y P(x,y) → True : 모든 x마다, y=0을 잡으면 곱이 0이 되므로 참
+
+    - ∃x∀y P(x,y) → True : x=0이면 모든 y에 대해 곱이 0 → 참
+
+    - ∃x∃y P(x,y) → True : x=0, y=1 → 성립
+
+<br/>
+
+- 예시2 : P(x,y) : x/y = 1
+
+    - ∀x∀y P(x,y) → False : 모든 x,y에 대해 x=y여야 하는데 불가능
+
+    - ∀x∃y P(x,y) → False : 모든 x마다 y=x를 잡으면 성립하지만, y=0 문제 때문에 정의역 전체에서는 불가능
+
+    - ∃x∀y P(x,y) → False : 고정된 x가 모든 y에 대해 x=y를 만족시킬 수 없음
+
+    - ∃x∃y P(x,y) → True : x=2, y=2 → 2/2=1 → 참
 
 
 
