--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -1,1 +1,27 @@
+### 3개의 한정자가 붙는 경우의 예시
+
+- 문제 : 세상 모든 항공사에서 운행하는 비행기를 한 번 이상 탄 여성이 존재한다
+
+    - P(w,f): "여성 w 가 비행기 f 를 탔다."
+
+    - Q(f,a): "비행기 f 는 항공사 a 의 비행편이다."
+ 
+        - 즉, P는 “탔다”라는 관계, Q는 “어떤 항공사의 비행기다”라는 관계를 나타냄
+     
+        - 정의역은 다음과 같다
+     
+            - w: 모든 여성 집합에서 선택
+
+            - f: 모든 비행기 집합에서 선택
+
+            - a: 모든 항공사 집합에서 선택
+         
+    - **논리식** : ∃w∀a∃f(P(w,f)∧Q(f,a))
+ 
+        - ∃w: 여성이 한명만 존재하면 됨
+        
+        - ∀a: 모든 항공사의 비행기가 존재해야함
+       
+        - ∃f: 항공사의 비행기 중 하나만 타면 됨 
+
 
