--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -1,6 +1,6 @@
 ### 3개의 한정자가 붙는 경우의 예시
 
-- 문제 : 세상 모든 항공사에서 운행하는 비행기를 한 번 이상 탄 여성이 존재한다
+- 문제1 : 세상 모든 항공사에서 운행하는 비행기를 한 번 이상 탄 여성이 존재한다
 
     - P(w,f): "여성 w 가 비행기 f 를 탔다."
 
@@ -24,4 +24,13 @@
        
         - ∃f: 항공사의 비행기 중 하나만 타면 됨 
 
+<br>
+
+- 문제2 : 세상 모든 항공사에서 비행편을 탄 여성이 존재하지 않는다
+
+    - 위 결과 앞에 **부정**을 붙이면 됨
+ 
+    - ¬∃w∀a∃f(P(w,f)∧Q(f,a)) 이고 부정을 드모르간 법을 사용하여 표현하면 아래와 같이 표현 가능 
+ 
+    - 
 
