--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -32,5 +32,4 @@
  
     - ¬∃w∀a∃f(P(w,f)∧Q(f,a)) 이고 부정을 드모르간 법을 사용하여 표현하면 아래와 같이 표현 가능 
  
-    - 
-
+![System Resources](../../images/Discrete%20Structures%20images/드모르간부정전개.png)
