--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -33,3 +33,85 @@
     - ¬∃w∀a∃f(P(w,f)∧Q(f,a)) 이고 부정을 드모르간 법을 사용하여 표현하면 아래와 같이 표현 가능 
  
 ![System Resources](../../images/Discrete%20Structures%20images/드모르간부정전개.png)
+
+<br/>
+
+### 퀴즈 
+
+- 문제 : Q(x): “x+1=2x” 이고, 정의역 x는 실수 전체 집합이다
+
+- Q(1)
+
+    - 대입 : 1 + 1 = 2⋅1 → 2 = 2 → 참
+ 
+- Q(3)
+
+    - 대입 : 3 + 1 = 2⋅3 → 4 = 6 → 거짓
+ 
+- ∀x Q(x)
+
+    - 실제로는 x=1일 때만 참이고, 다른 값에서는 거짓임 -> 즉, 거짓
+
+- ∃x Q(x)
+
+    - x=1일 때 참이므로, 적어도 하나 존재한다 -> 참
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
