--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -36,7 +36,7 @@
 
 <br/>
 
-### 퀴즈 
+### 퀴즈 1
 
 - 문제 : Q(x): “x+1=2x” 이고, 정의역 x는 실수 전체 집합이다
 
@@ -56,10 +56,23 @@
 
     - x=1일 때 참이므로, 적어도 하나 존재한다 -> 참
 
+<br/>
+
+### 퀴즈 2 
 
 ![System Resources](../../images/Discrete%20Structures%20images/02-2장퀴즈2.png)
 
+- a) “모든 학생들은 신입생이다.”
 
+    - **∀x F(x)**
+
+     - 설명: 임의의 학생 x를 택하면, x는 신입생(F)이다
+
+- b) “모든 학생들은 최소한 하나의 교과목을 수강한다.”
+
+    - **∀x ∃y T(x,y)**
+
+    - 설명: 임의의 학생 x에 대해, 어떤 교과목 y가 존재해서 x가 y를 수강한다.
 
 
 
