--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -74,11 +74,25 @@
 
     - 설명: 임의의 학생 x에 대해, 어떤 교과목 y가 존재해서 x가 y를 수강한다.
 
+<br/>
 
+### 논증(argument)
 
+- **논증(argument)** : 여러 문장(전제)들이 이어져 마지막에 결론(conclusion)으로 끝나는 것
 
+- 논증 예시
 
+    - "모든 인간은 죽는다"
+ 
+        - 논리식 : ∀x(Man(x) → Mortal(x)) 
+    
+    - "소크라테스는 인간이다:
+ 
+        - 논리식 : Man(Socrates)
 
+    - 결론: "소크라테스는 죽는다"
+ 
+        - 논리식 : Mortal(Socrates)
 
 
 
