--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -94,6 +94,9 @@
  
         - 논리식 : Mortal(Socrates)
 
+- **논증 표현**
+  
+![System Resources](../../images/Discrete%20Structures%20images/논증표현식.png)
 
 
 
