--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -98,15 +98,33 @@
   
 ![System Resources](../../images/Discrete%20Structures%20images/논증표현식.png)
 
+<br/>
 
+### 논증(argument) 추가 설명 
 
+- 논증이 **유효(valid)** 하려면, 모든 전제가 참일 때 결론도 **반드시 참**이어야 한다
 
+    - 즉, 전제가 다 맞는데 결론이 틀리면, 그건 잘못된 논증
 
+- 논증 형식(argument form)이란 명제 변수를 포함하는 복합 명제들의 나열
 
+- 우리는 유효한 논증을 만드는 방법은 아래와 같이 두 단계로 이루어짐
 
+    - 먼저 명제 논리에서, 그다음 술어 논리(predicate logic)에서 다룬다
+ 
+    - 여기서 추론 규칙이 유효한 논증을 만드는 데 핵심적인 도구이다
+ 
+        - 전제 1: 비가 오면 땅이 젖는다. (p → q)
 
+        - 전제 2: 지금 비가 온다. (p)
 
+        - 결론: 따라서 땅이 젖는다. (q)
+     
+        - 즉, **명제 논리**로 p와 q로만 표현한 뒤, **한정자**가 필요하면 사용하고, **추론 규칙**을 사용하여 결론 도출 
 
+- 추가 규칙 
+
+![System Resources](../../images/Discrete%20Structures%20images/추가규칙.png)
 
 
 
