--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -126,6 +126,26 @@
 
 ![System Resources](../../images/Discrete%20Structures%20images/추가규칙.png)
 
+<br/>
+
+### 논증 문제 예시 
+
+- 단 하나의 명제 p∧(p→q)가 주어졌을 때, q가 결론임을 보여라
+
+- 즉, 주어진 명제가 참 일 때, 단계적으로 추론해 최종적으로 q를 도출할 수 있음을 보여주면 됨 
+
+    - p ∧ (p → q)는 주어진 전제 (Premise).
+
+        - 즉, "p가 참이고 동시에 p→q도 참이다."
+     
+    - 전제에서 앞부분 p가 참
+ 
+    - 따라서 함의 부분에서 ¬p∨q로 바꿀 수 있음
+ 
+    - 따라서 q도 참이여야 함 
+
+
+
 
 
 
