--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -134,15 +134,13 @@
 
 - 즉, 주어진 명제가 참 일 때, 단계적으로 추론해 최종적으로 q를 도출할 수 있음을 보여주면 됨 
 
-    - p ∧ (p → q)는 주어진 전제 (Premise).
-
-        - 즉, "p가 참이고 동시에 p→q도 참이다."
+    - p ∧ (p → q)는 주어진 전제 : Premise (전제)
      
-    - 전제에서 앞부분 p가 참
+    - 전제에서 앞부분 p가 참 : Simplification (둘 다 동시에 참이면, 그 중 하나만 꺼내와도 참이라는 규칙)
  
-    - 따라서 함의 부분에서 ¬p∨q로 바꿀 수 있음
+    - 따라서 함의 부분에서 ¬p∨q도 참 : Simplification
  
-    - 따라서 q도 참이여야 함 
+    - 따라서 q도 참이여야 함 : Modus Ponens (함의 p -> q 가 참이고, p가 참이라면 q도 참이라는 규칙 p⟹q)
 
 
 
