--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -142,7 +142,39 @@
  
     - 따라서 q도 참이여야 함 : Modus Ponens (함의 p -> q 가 참이고, p가 참이라면 q도 참이라는 규칙 p⟹q)
 
+<br/>
 
+### 한정자가 포함된 문장에서 사용하는 추론 규칙
+
+- **Universal Instantiation (UI)**
+
+    - ∀x P(x) → P(c) (c는 임의의 원소)
+
+    - 모든 x에 대해 P(x)가 참이면, 특정한 c에 대해서도 P(c)는 참이다
+ 
+    - ex: 모든 사람이 죽는다 → 소크라테스도 죽는다
+
+- **Universal Generalization (UG)**
+
+    - P(c) → ∀x P(x)
+
+    - 임의의 원소 c에 대해 P(c)가 참이라면, 모든 x에 대해서도 P(x)가 참이다.
+
+        - 아무 원소를 골라도 성질이 성립 → 따라서 전체 집합에 대해 성립
+
+- **Existential Instantiation (EI)**
+
+    - ∃x P(x) → P(c)
+
+    - 어떤 x가 존재해서 P(x)가 참이라면, 이것을 만족하는 c가 반드시 존재한다
+
+- **Existential Generalization (EG)**
+
+    - P(c) → ∃x P(x)
+
+    - 특정 원소 c에 대해 P(c)가 참이라면, ‘어떤 x가 존재한다’라고 일반화할 수 있다
+
+        - 철수가 시험에 합격했다 → 따라서 어떤 학생이 합격했다
 
 
 
