--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -176,11 +176,33 @@
 
         - 철수가 시험에 합격했다 → 따라서 어떤 학생이 합격했다
 
+<br/>
+
+### 한정자 & 추론 규칙 예시 문제 
+
+- 전제 : “모든 남자는 두 다리를 가지고 있다” / “존 스미스는 남자다”
+
+- 문제 : “존 스미스는 두 다리를 가지고 있다” 라는 결론을 도출하시오 
 
 
 
+    - (1) ∀x (M(x) → L(x)) : Premise
+
+        -  “모든 x에 대해, x가 남자라면 두 다리를 가진다.” (전제)
 
 
+
+    - (2) M(J) → L(J) : UI from (1)
+
+        - (1)에서 보편 인스턴스화(UI)를 적용해, John Smith(J)에 대해 M(J) → L(J).
+
+    - M(J) :  Premise
+
+        - “존 스미스는 남자다.” (전제)
+
+    - L(J) : Modus Ponens using (2) and (3)
+
+        - (2)와 (3)을 이용해 Modus Ponens 규칙으로 L(J)를 얻는다
 
 
 
