--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -196,11 +196,11 @@
 
         - (1)에서 보편 인스턴스화(UI)를 적용해, John Smith(J)에 대해 M(J) → L(J).
 
-    - M(J) :  Premise
+    - (3) M(J) :  Premise
 
         - “존 스미스는 남자다.” (전제)
 
-    - L(J) : Modus Ponens using (2) and (3)
+    - (4) L(J) : Modus Ponens using (2) and (3)
 
         - (2)와 (3)을 이용해 Modus Ponens 규칙으로 L(J)를 얻는다
 
