--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -178,7 +178,7 @@
 
 <br/>
 
-### 한정자 & 추론 규칙 예시 문제 
+### 한정자 & 추론 규칙 예시 문제 1
 
 - 전제 : “모든 남자는 두 다리를 가지고 있다” / “존 스미스는 남자다”
 
@@ -204,14 +204,83 @@
 
         - (2)와 (3)을 이용해 Modus Ponens 규칙으로 L(J)를 얻는다
 
+<br/>
 
+### 한정자 & 추론 규칙 예시 문제 2
 
+- 결론 : 첫 번째 시험을 통과한 사람 중 책을 읽지 않은 사람이 있다
 
+- 전제 : 이 반 학생 중 책을 읽지 않은 사람이 있다 / 이 반 모든 학생은 첫 번째 시험을 통과했다
 
+- 기호 정의
 
+    - C(x): x는 이 반 학생이다
 
+    - B(x): x는 책을 읽었다
 
+    - P(x): x는 첫 번째 시험에 합격했다
 
+<br/>
+
+- 전제와 결론의 기호화
+
+    - Premise 1: ∃x ( C(x) ∧ ¬B(x) )
+        
+        - 이 반에 속하면서 책을 읽지 않은 학생이 존재한다
+
+    - Premise 2: ∀x ( C(x) → P(x) )
+       
+        - 이 반의 모든 학생은 시험에 합격했다
+
+    - Conclusion: ∃x ( P(x) ∧ ¬B(x) )
+       
+        - 시험에 합격했지만 책을 읽지 않은 학생이 존재한다
+
+<br/>
+
+- 추론 과정
+
+- (1) ∃x ( C(x) ∧ ¬B(x) ) : premise 1
+
+    - 전제 : 책을 안 읽은 학생이 있음
+
+- (2) C(a) ∧ ¬B(a) : (Existential Instantiation, EI)
+    
+    - (1)에서 임의의 학생 a를 잡음
+
+- (3) C(a) : Simplification
+
+    - (2)에서 C(a)가 참
+ 
+    - a 학생은 이 반에 속한다
+      
+- (4) ∀x ( C(x) → P(x) ) : premise 2
+
+    - 전제 (모든 학생은 시험 합격)
+ 
+    - 이 반의 모든 학생은 시험을 통과했다
+
+- (5) C(a) → P(a) : (Universal Instantiation, UI)
+    
+    - (4)에서 a에 대해 적용
+ 
+    - 그 학생 a도 시험을 통과했다
+
+- (6) P(a) : Modus Ponens
+
+    - (3)과 (5)로부터 추론
+
+- (7) ¬B(a) : Simplification
+
+    - (2)에서 다시 단순화
+
+- (8) P(a) ∧ ¬B(a) : Conjunction
+
+    - (6)과 (7) 결합 
+
+- ∃x ( P(x) ∧ ¬B(x) ) : Existential Generalization, EG
+
+    - (8)에서 일반화
 
 
 
