--- a/Discrete Structures/Discrete Structures study/02-2장.md
+++ b/Discrete Structures/Discrete Structures study/02-2장.md
@@ -236,6 +236,14 @@
        
         - 시험에 합격했지만 책을 읽지 않은 학생이 존재한다
 
+![System Resources](../../images/Discrete%20Structures%20images/논증구조예시.png)
+
+- 위 식은 아래와 같이 바꿀 수 있음
+
+    - ∃x(C(x)∧¬B(x)),∀x(C(x)→P(x))∴∃x(P(x)∧¬B(x))
+ 
+    - (∃x(C(x)∧¬B(x))∧∀x(C(x)→P(x)))→∃x(P(x)∧¬B(x))
+      
 <br/>
 
 - 추론 과정
