--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -1,2 +1,123 @@
 ### Universal Modus Ponens
 
+- **Universal Modus Ponens**
+
+    - UI + Modus Ponens 를 의미
+ 
+    - 즉, P -> Q 에서 특정 원소까지 넣어서 **한번에 계산**한 것
+
+    - 일반적인 MP는 다음과 같음
+ 
+        - (1) ∀x(C(x)→P(x)) : 전제
+      
+        - (2) C(a) → P(a) : a에 대해 Universal Instantiation(UI) 적용
+
+        - (3) C(a) : 학생 a는 이 반 학생
+
+        - (4) P(a) : Modus Ponens
+     
+            - 이걸 한번에 하여
+         
+            - (1) ∀x(C(x)→P(x)) : 전제
+         
+            - (2) P(a) : **UMP**
+ 
+     
+
+![System Resources](../../images/Discrete%20Structures%20images/UMP.png)
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
