--- a/Discrete Structures/Discrete Structures study/02-3장.md
+++ b/Discrete Structures/Discrete Structures study/02-3장.md
@@ -22,10 +22,13 @@
          
             - (2) P(a) : **UMP**
  
-     
-
 ![System Resources](../../images/Discrete%20Structures%20images/UMP.png)
 
+<br/>
+
+- 소크라테스 예시
+
+![System Resources](../../images/Discrete%20Structures%20images/UMP_소크라테스예시.png)
 
 
 
